title of mainwindow works
The title of the main window is now properly loaded from either the save files or from the name set in the 'create new nation' popup

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,12 +1,17 @@
+rule-wize:
 Add Buildings
-Add feats/unit feats&other unit related things
+Add Institutions
 add culture&religion
 add tradefunction
+
+Add military things
+Add feats/unit feats&other unit related things
 
 on mainthread:
 fix loop so that all buttons have functionality
 
 on mainwindow:
+add slots so that we can actually start testing functionality
 Add governemnt tab
 Add Official functionality
 Add trade
