more buildings done
yes, more buildings have been done. read the to-do!

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -1,86 +1,5 @@
-general:
-construct the save/load methods so that they... *gasp* work!
-when a new vassal is created make a new window, and simply make the 'inactive ones' invisible, so that their states can still be accessed.
-
-For some reason whenever I try saving I get an access denied IOException. Add system outs in save to isolate the issue (maybe even in nationhandler to see which method(s) generate the error quickly) 
-The dummy button should probably be there for a while, it is very very very useful for debugging and since I can write a day of coding without ever testing it, that is sorely needed.
-Whenever I go from an instance of Lord within NationHandler and go back to access variables within NationHandler the variables have been reset. This is because I generate a new instance of NationHandler whenever I inside Lord try to directly access it. There must be a better way of sending information between the classes. Maybe requests is the best option? This is something that I should continue investigating. Like now.
-
 WHEN CREATING VASSALS ONE MUST ASSIGN NAME TO THE VASSAL AND THE LORD OF THE VASSAL!!!!
 
-rule-wize:
-Add Buildings
-Add Institutions
-add culture&religion tables
-add tradefunction
-Add feats/unit feats&other unit related things
-
-on ReadNWrite:
-create the save file structure for 
-	lords---DONE!
-	hexes---DONE!
-	units---DONE!
-	routes---DONE!
-	officials---DONE!
-finish save mehtods for
-	lords---DONE!
-	hexes---DONE!
-	units---DONE?
-	routes---DONE!
-	officials---DONE!
-finish load methods for
-	lords---DONE!
-	hexes---DONE? Test required!
-	units
-	routes
-	officials
-
-on mainthread:---DONE!
-fix loop so that all buttons have functionality---DONE!
-tidy up the mainthread so that it is a bit easier to overview wtf is going on. MORE COMMENTS!---DONE!
-set up a check to see if save_request? and then call NationHandler.properSave() or something---Will not do this!
-connect to nationhandler instead of mainwindow---DONE!
-
-NationHanler:
-connect to the mainthread in a proper way.---DONE!
-initializer must set overlord window to visible and set that up properly---DONE!
-set up methods for showing (or unshowing) lord windows---DONE!
-
-LordWindow:
-governmentpanel
-nationstatspanel
-culture/portfoliopanel
-set up pages for vassaltree and notes
-set up buttons (maybe nex to file?) for hexes, military, trade
-lordwindow and lord needs to merge into the same class---DONE!
-add layouts so that we can actually start testing functionality
-fix the save button so that we can start trying to read/write save files!---DONE!
-
-on nation:
-total bpm, tax income, total trade value and overlord tax must be global and accessible, bake them into the nation object---DONE!
-
-Add governemnt tab (already exists??)
-These should not be on main window, but should possibly be sub-classes to main window, which all opens a small pop-up themselves.
-Add Official functionality
-Add trade
-add hex things
-add units
-Add military things
-
-priorities:
-1. connect nationhandler to mainthread---DONE!
-2. finish outlining under 'on ReadNWrite:'---DONE!
-3. fininsh input part of classes hex, unit, route, official---the bone is constructed for all of them except for units
-4. fix the save part of 'on ReadNWrite:'
-5. finish lord layout---put the different tabs in their of classes? and pull them from there so that they are more easily accessible and updatable. Take the important information (the three in the left tab and all of the right) and make them named variables which can be retreived (also need to update load/save so that the last three on the left are included)
-6. finish hex layout
-7. finish routes layout
-8. finish officials layout
-9. finish load part of 'on ReadNWrite:'
-10. finish classes hex, unit, route, official
-11. finish units layout
-12. set initializers of nationhandler so that lordwindow, hexwindow, unitwindow and officialwindow are created
-NEXT STEP:
-FIX setCulture and loadculture.---DONEISH!!
-FIX histocracystuff.---NOW ONLY FUNCTIONALITY IS NEEDED TO BE ADDED!
-FIX routes/hexes/units/officials.<----THIS IS THE NEXT STEP!!
+reading the input values on buildings into built_buildings,built_fortifications and so on seems to be working!
+1. next step is to be able to read these strings and put them into the visuals.
+2. after that we need to fix so that when we load the nation, hexes are loaded properly, and that the built_strings are loaded!
