races almost done?
probably done with races, they work as intended now and what is left might be to add some additional functionalities

--- a/TODO.txt
+++ b/TODO.txt
@@ -3,9 +3,10 @@ Add notes tab
 Add guilds to the buildings & guildstitutions
 
 ::Races::
--see what is wrong with load races
--add possibility in the raceloader to remove a race
-(then done with races??)
+-see what is wrong with load races!!!DONE!!!
+-add possibility in the raceloader to remove a race!!!DONE!!!
+(then done with races??)nope;
+-add flexible racestat
 ::Units::
 -Add code to everything, as in code in Unit(), and connections between everything
 -need to make sure loading/saving works
