--- a/Changelog.txt
+++ b/Changelog.txt
@@ -13,3 +13,6 @@ visuals of the unit tab,unit window and race window/load race window are mostly 
 this is mostly not connected to the code layer or save layer.
 listofunits is in the nationhandler. creating a new row for a unit in the unit tab creates a new entry in the list, and updating a unit will remove it from the list and add the new unit on top of the list as if creating a new one.
 listofraces is in the unittab. currently not possible to remove races (should be fairly easily implemented) but can add, modify and save races (though not able to load)
+26/2
+(I think) loading/saving and modifying races works now.
+need to add flexible racial stat.
