--- a/TODO.txt
+++ b/TODO.txt
@@ -16,4 +16,4 @@ Add guilds to the buildings & guildstitutions
 -add more government modifiers in lord!!!DONE!!!
 -make cavalry work for units!!!DONE!!!
 -check costs for all the units!!!DONE!!!<- not double checked...
--add visual layer in mount for the mount attack
+-add visual layer in mount for the mount attack!!!DONE!!!
